some issue fixed when the comment bar visibilty for each posts using their id

--- a/Client/Memories/src/components/CommentBar/commentBar.css
+++ b/Client/Memories/src/components/CommentBar/commentBar.css
@@ -4,7 +4,7 @@
     padding: 16px;
     border: 1px solid #d1d5db;
     border-radius: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     display: flex;
     justify-content: space-around;
